[package]
name = "okx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
base64 = "0.22.1"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0", features=["arbitrary_precision"]}
serde_qs = "0.13.0"
serde_with = "3.7.0"
url = "2.5.2"
sha2 = "0.10.8"
digest = "0.10.7"
hmac = "0.12.1"
const_format = "0.2.32"
reqwest = {version = "0.12.5", features=["json", "blocking"]}
chrono = "0.4.38"
rust_decimal = "1.35.0"
log = "0.4.22"
tokio = {version="1.38.0", features=["rt", "rt-multi-thread", "macros"]}
